welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: '<-' expected but ')' found.
	for (k >- 0 to n-1){
                          ^indexOfMaxValue:8: error: illegal start of simple expression
}
^